<?xml version="1.0"?>
<package format="3">
  <name>sentor</name>
  <version>0.1.0</version>
  <description>Sentor Python-based monitoring logic</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>sentor_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sentor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
